--- a/arch/arm/configs/twrp_defconfig
+++ b/arch/arm/configs/twrp_defconfig
@@ -12,7 +12,6 @@ CONFIG_RCU_BOOST=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
@@ -31,17 +30,20 @@ CONFIG_PANIC_TIMEOUT=5
 # CONFIG_KALLSYMS is not set
 CONFIG_ASHMEM=y
 CONFIG_EMBEDDED=y
-CONFIG_PERF_EVENTS=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
+CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
+CONFIG_MODULES=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
@@ -73,13 +75,12 @@ CONFIG_MSM_PIL_VIDC=y
 CONFIG_MSM_PIL_GSS=y
 CONFIG_MSM_MODEM_8960=y
 CONFIG_MSM_LPASS_8960=y
-# CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_MSM_HSIC_GPIO_REV06=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED=y
-CONFIG_MSM_WATCHDOG=y
 CONFIG_MSM_DLOAD_MODE=y
+CONFIG_BT_BCM4335=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_MSM_EBI_ERP=y
@@ -105,9 +106,7 @@ CONFIG_COMPACTION=y
 CONFIG_UACCESS_WITH_MEMCPY=y
 CONFIG_SECCOMP=y
 CONFIG_CC_STACKPROTECTOR=y
-# CONFIG_CP_ACCESS is not set
 CONFIG_CPU_FREQ=y
-<<<<<<< HEAD:arch/arm/configs/twrp_defconfig
 CONFIG_CPU_FREQ_LIMIT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
@@ -115,9 +114,6 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-=======
-CONFIG_SCHED_FREQ_INPUT=y
->>>>>>> adeb0e39e1b... cpufreq: Add a ton of governors:arch/arm/configs/side_jf_defconfig
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
@@ -128,20 +124,37 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
 CONFIG_NET=y
+CONFIG_PACKET=y
 CONFIG_UNIX=y
+CONFIG_XFRM_USER=y
+CONFIG_NET_KEY=y
 CONFIG_INET=y
-# CONFIG_INET_XFRM_MODE_TRANSPORT is not set
-# CONFIG_INET_XFRM_MODE_TUNNEL is not set
-# CONFIG_INET_XFRM_MODE_BEET is not set
+CONFIG_IP_MULTICAST=y
+CONFIG_IP_ADVANCED_ROUTER=y
+CONFIG_IP_MULTIPLE_TABLES=y
+CONFIG_IP_ROUTE_VERBOSE=y
+CONFIG_IP_PNP=y
+CONFIG_IP_PNP_DHCP=y
+CONFIG_INET_AH=y
+CONFIG_INET_ESP=y
+CONFIG_INET_IPCOMP=y
 # CONFIG_INET_LRO is not set
-# CONFIG_INET_DIAG is not set
-# CONFIG_IPV6 is not set
-# CONFIG_ANDROID_PARANOID_NETWORK is not set
-# CONFIG_NET_ACTIVITY_STATS is not set
+CONFIG_INET_DIAG_DESTROY=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_IPV6=y
+CONFIG_IPV6_PRIVACY=y
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_IPV6_ROUTE_INFO=y
+CONFIG_IPV6_OPTIMISTIC_DAD=y
+CONFIG_INET6_AH=y
+CONFIG_INET6_ESP=y
+CONFIG_INET6_IPCOMP=y
+CONFIG_IPV6_MIP6=y
+CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_IPV6_SUBTREES=y
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
-# CONFIG_NF_CONNTRACK_PROCFS is not set
 CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CT_PROTO_UDPLITE=y
 CONFIG_NF_CONNTRACK_FTP=y
@@ -157,7 +170,6 @@ CONFIG_NETFILTER_TPROXY=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
-CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_NETFILTER_XT_TARGET_HMARK=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_LOG=y
@@ -183,7 +195,9 @@ CONFIG_NETFILTER_XT_MATCH_LIMIT=y
 CONFIG_NETFILTER_XT_MATCH_MAC=y
 CONFIG_NETFILTER_XT_MATCH_MARK=y
 CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
+CONFIG_NETFILTER_XT_MATCH_POLICY=y
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
+CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
@@ -212,43 +226,108 @@ CONFIG_IP_NF_SECURITY=y
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
-# CONFIG_RPS is not set
-# CONFIG_WIRELESS is not set
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_MATCH_AH=y
+CONFIG_IP6_NF_MATCH_EUI64=y
+CONFIG_IP6_NF_MATCH_FRAG=y
+CONFIG_IP6_NF_MATCH_OPTS=y
+CONFIG_IP6_NF_MATCH_HL=y
+CONFIG_IP6_NF_MATCH_IPV6HEADER=y
+CONFIG_IP6_NF_MATCH_MH=y
+CONFIG_IP6_NF_MATCH_RPFILTER=y
+CONFIG_IP6_NF_MATCH_RT=y
+CONFIG_IP6_NF_TARGET_HL=y
+CONFIG_IP6_NF_FILTER=y
+CONFIG_IP6_NF_TARGET_REJECT=y
+CONFIG_IP6_NF_MANGLE=y
+CONFIG_IP6_NF_RAW=y
+CONFIG_IP6_NF_SECURITY=y
+CONFIG_BRIDGE_NF_EBTABLES=y
+CONFIG_BRIDGE_EBT_BROUTE=y
+CONFIG_L2TP=y
+CONFIG_BRIDGE=y
+CONFIG_NET_SCHED=y
+CONFIG_NET_SCH_HTB=y
+CONFIG_NET_SCH_PRIO=y
+CONFIG_NET_CLS_FW=y
+CONFIG_NET_CLS_U32=y
+CONFIG_CLS_U32_MARK=y
+CONFIG_NET_CLS_FLOW=y
+CONFIG_NET_EMATCH=y
+CONFIG_NET_EMATCH_CMP=y
+CONFIG_NET_EMATCH_NBYTE=y
+CONFIG_NET_EMATCH_U32=y
+CONFIG_NET_EMATCH_META=y
+CONFIG_NET_EMATCH_TEXT=y
+CONFIG_NET_CLS_ACT=y
+CONFIG_BT=y
+CONFIG_BT_HIDP=y
+CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART_H4=y
+CONFIG_CFG80211=y
+CONFIG_CFG80211_INTERNAL_REGDB=y
+CONFIG_WIRELESS_EXT_SYSFS=y
+CONFIG_CFG80211_ALLOW_RECONNECT=y
+CONFIG_RFKILL=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
-CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
+CONFIG_BLK_DEV_RAM=y
+CONFIG_BLK_DEV_RAM_SIZE=8192
+CONFIG_SAMSUNG_JACK=y
 CONFIG_UID_STAT=y
+CONFIG_QSEECOM=y
 CONFIG_SEC_MISC=y
 CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_BCM2079X_NFC_I2C=y
 # CONFIG_TIMA_LOG is not set
+CONFIG_UID_CPUTIME=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
-CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
-CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
-CONFIG_SCSI_SCAN_ASYNC=y
+
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
-# CONFIG_NET_CORE is not set
+CONFIG_DUMMY=y
+CONFIG_TUN=y
 # CONFIG_ETHERNET is not set
-# CONFIG_WLAN is not set
-CONFIG_INPUT_FF_MEMLESS=y
+CONFIG_PHYLIB=y
+CONFIG_PPP=y
+CONFIG_PPP_BSDCOMP=y
+CONFIG_PPP_DEFLATE=y
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_MPPE=y
+CONFIG_PPPOLAC=y
+CONFIG_PPPOPNS=y
+CONFIG_PPP_ASYNC=y
+CONFIG_SLIP=y
+CONFIG_SLIP_COMPRESSED=y
+CONFIG_SLIP_MODE_SLIP6=y
+CONFIG_USB_USBNET=y
+# CONFIG_USB_NET_AX8817X is not set
+# CONFIG_USB_NET_CDCETHER is not set
+# CONFIG_USB_NET_CDC_NCM is not set
+# CONFIG_USB_NET_NET1080 is not set
+# CONFIG_USB_NET_CDC_SUBSET is not set
+# CONFIG_USB_NET_ZAURUS is not set
+CONFIG_MSM_RMNET_USB=y
+CONFIG_BCM4335=y
+CONFIG_BCMDHD_FW_PATH="/vendor/etc/wifi/bcmdhd_sta.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/vendor/etc/wifi/nvram_net.txt"
+CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
+CONFIG_WLAN_REGION_CODE=400
 CONFIG_INPUT_EVDEV=y
-# CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_MATRIX=y
 CONFIG_SENSORS_HALL=y
 CONFIG_KEYBOARD_CYPRESS_TOUCH_236=y
 CONFIG_GLOVE_TOUCH=y
-# CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI=y
 CONFIG_INPUT_MISC=y
@@ -258,7 +337,6 @@ CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_STM_LIS3DH=y
-CONFIG_SERIO_LIBPS2=y
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_N_SMUX=y
 CONFIG_N_SMUX_LOOPBACK=y
@@ -268,6 +346,7 @@ CONFIG_SMUX_CTL=y
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
+CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM=y
 # CONFIG_MSM_ADSPRPC is not set
 CONFIG_I2C=y
@@ -282,7 +361,6 @@ CONFIG_SLIMBUS_MSM_CTRL=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_SX150X=y
 CONFIG_SEC_GPIO_DVS=y
-CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MSM is not set
 CONFIG_PM8921_CHARGER=y
 CONFIG_BATTERY_BCL=y
@@ -311,7 +389,8 @@ CONFIG_VIDEO_V4L2_SUBDEV_API=y
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
 CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
-# CONFIG_V4L_USB_DRIVERS is not set
+CONFIG_USB_VIDEO_CLASS=y
+# CONFIG_USB_GSPCA is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_MSM_CAMERA_V4L2=y
 CONFIG_MSM_CAMERA_SENSOR=y
@@ -349,6 +428,8 @@ CONFIG_MDNIE_LITE_TUNING=y
 CONFIG_HBM_PSRE=y
 CONFIG_SUPPORT_SECOND_POWER=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_LCD_CLASS_DEVICE=y
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -359,7 +440,52 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8960=y
 CONFIG_SND_SOC_ES325=y
 CONFIG_SND_SOC_ES325_SLIM=y
-# CONFIG_USB_HID is not set
+CONFIG_HIDRAW=y
+CONFIG_UHID=y
+CONFIG_HID_A4TECH=y
+CONFIG_HID_ACRUX=y
+CONFIG_HID_APPLE=y
+CONFIG_HID_BELKIN=y
+CONFIG_HID_CHERRY=y
+CONFIG_HID_CHICONY=y
+CONFIG_HID_PRODIKEYS=y
+CONFIG_HID_CYPRESS=y
+CONFIG_HID_DRAGONRISE=y
+CONFIG_HID_EMS_FF=y
+CONFIG_HID_ELECOM=y
+CONFIG_HID_EZKEY=y
+CONFIG_HID_KEYTOUCH=y
+CONFIG_HID_KYE=y
+CONFIG_HID_UCLOGIC=y
+CONFIG_HID_WALTOP=y
+CONFIG_HID_GYRATION=y
+CONFIG_HID_TWINHAN=y
+CONFIG_HID_KENSINGTON=y
+CONFIG_HID_LCPOWER=y
+CONFIG_HID_LOGITECH=y
+CONFIG_HID_MAGICMOUSE=y
+CONFIG_HID_MICROSOFT=y
+CONFIG_HID_MONTEREY=y
+CONFIG_HID_MULTITOUCH=y
+CONFIG_HID_NTRIG=y
+CONFIG_HID_ORTEK=y
+CONFIG_HID_PANTHERLORD=y
+CONFIG_HID_PETALYNX=y
+CONFIG_HID_PICOLCD=y
+CONFIG_HID_ROCCAT=y
+CONFIG_HID_SAMSUNG=y
+CONFIG_HID_SONY=y
+CONFIG_HID_SUNPLUS=y
+CONFIG_HID_GREENASIA=y
+CONFIG_HID_SMARTJOYPLUS=y
+CONFIG_HID_SYNAPTICS_BT=y
+CONFIG_HID_TOPSEED=y
+CONFIG_HID_THRUSTMASTER=y
+CONFIG_HID_WACOM=y
+CONFIG_HID_WACOM_POWER_SUPPLY=y
+CONFIG_HID_WIIMOTE=y
+CONFIG_HID_ZEROPLUS=y
+CONFIG_HID_ZYDACRON=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_SUSPEND=y
@@ -368,8 +494,16 @@ CONFIG_USB_EHCI_EHSET=y
 CONFIG_USB_EHCI_MSM=y
 CONFIG_USB_EHCI_MSM_HSIC=y
 CONFIG_USB_EHCI_MSM_HOST4=y
+CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
+CONFIG_USB_STORAGE_SDDR09=y
+CONFIG_USB_STORAGE_SDDR55=y
+CONFIG_USB_STORAGE_JUMPSHOT=y
+CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_STORAGE_DETECT=y
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_PL2303=y
+CONFIG_USB_SERIAL_CSVT=y
 CONFIG_USB_QCOM_DIAG_BRIDGE=y
 CONFIG_USB_QCOM_MDM_BRIDGE=y
 CONFIG_USB_QCOM_KS_BRIDGE=y
@@ -441,22 +575,19 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_QUOTA=y
 CONFIG_FUSE_FS=y
-CONFIG_MSDOS_FS=y
-CONFIG_VFAT_FS=y
-# CONFIG_SDFAT_FS is not set
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
+CONFIG_SDFAT_CHECK_RO_ATTR=y
+# CONFIG_SDFAT_DEBUG is not set
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_CONFIGFS_FS=y
 CONFIG_SDCARD_FS=y
-CONFIG_NLS_CODEPAGE_437=y
+CONFIG_CIFS=m
 CONFIG_NLS_ASCII=y
-CONFIG_NLS_ISO8859_1=y
-CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_RCU_CPU_STALL_VERBOSE is not set
-# CONFIG_EVENT_POWER_TRACING_DEPRECATED is not set
 CONFIG_FTRACE=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 # CONFIG_SEC_DEBUG_USER is not set
@@ -468,77 +599,96 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_SELINUX_DISABLE=y
 CONFIG_CRYPTO_NULL=y
-CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_ECB=y
-CONFIG_CRYPTO_HMAC=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
-CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_SHA1_ARM_NEON=y
-CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512_ARM_NEON=y
 CONFIG_CRYPTO_AES_ARM_BS=y
-CONFIG_CRYPTO_ARC4=y
-CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_TWOFISH=y
-CONFIG_CRYPTO_DEFLATE=y
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_HW is not set
-CONFIG_CRC_CCITT=y
-CONFIG_LIBCRC32C=y
-<<<<<<< HEAD:arch/arm/configs/twrp_defconfig
-=======
 
-#Custom edits
-# CONFIG_HOTPLUG_CPU is not set
+##########################################################
+# BuffCore
+##########################################################
+
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+# CONFIG_MSM_WATCHDOG is not set
+CONFIG_SCHED_FREQ_INPUT=y
+# CONFIG_PM_DEBUG is not set
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_NL80211_TESTMODE is not set
+# CONFIG_CMA is not set
+# CONFIG_CHR_DEV_SG is not set
+# CONFIG_CHR_DEV_SCH is not set
+# CONFIG_SCSI_CONSTANTS is not set
+# CONFIG_SCSI_LOGGING is not set
+# CONFIG_SCSI_SCAN_ASYNC is not set
 CONFIG_HOTPLUG=y
+
+##########################################################
+# Compression
+CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_DECOMPRESS_LZMA=y
-# CONFIG_MSM_CPUFREQ_LIMITER is not set
-CONFIG_CPU_VOLTAGE_TABLE=y
-# CONFIG_AUTOSMP is not set
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
-CONFIG_BOEFFLA_WL_BLOCKER=y
-CONFIG_FORCE_FAST_CHARGE=y
-# CONFIG_QUICK_WAKEUP is not set
+CONFIG_DECOMPRESS_LZ4=y
 CONFIG_HAVE_KERNEL_GZIP=y
-CONFIG_KERNEL_GZIP=y
-CONFIG_STATE_NOTIFIER=y
-CONFIG_INTELLI_PLUG=y
-CONFIG_IOSCHED_ZEN=y
-#CONFIG_DEFAULT_ZEN is not set
-CONFIG_IOSCHED_TRIPNDROID=y
-#CONFIG_DEFAULT_TRIPNDROID is not set
-<<<<<<< HEAD:arch/arm/configs/twrp_defconfig
-<<<<<<< HEAD:arch/arm/configs/twrp_defconfig
->>>>>>> 90b6aecfe00... block:Add tripndroid io sched and enable it:arch/arm/configs/side_jf_defconfig
-=======
+CONFIG_HAVE_KERNEL_LZMA=y
+CONFIG_HAVE_KERNEL_XZ=y
+CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_LZ4=y
+CONFIG_KERNEL_XZ=y
+CONFIG_RD_GZIP=y
 
-=======
->>>>>>> adeb0e39e1b... cpufreq: Add a ton of governors:arch/arm/configs/side_jf_defconfig
-CONFIG_IOSCHED_DEADLINE=y
-CONFIG_CC_OPTIMIZE_FOR_SPEED=y
-CONFIG_MSM_CPUFREQ_LIMITER=m
-<<<<<<< HEAD:arch/arm/configs/twrp_defconfig
+##########################################################
+# Clocks and voltages
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_LOW_CPUCLOCKS=y
-<<<<<<< HEAD:arch/arm/configs/twrp_defconfig
-CONFIG_CPU_OVERCLOCK=y
-CONFIG_OC_ULTIMATE=y
->>>>>>> 93df7216705... arch: Rewrite the overclock feature from scratch:arch/arm/configs/side_jf_defconfig
-=======
-# CONFIG_CPU_OVERCLOCK is not set
-# CONFIG_OC_ULTIMATE is not set
 
-#CFQ
-=======
-#CONFIG_CPU_OVERCLOCK is not set
-#CONFIG_OC_ULTIMATE is not set
->>>>>>> adeb0e39e1b... cpufreq: Add a ton of governors:arch/arm/configs/side_jf_defconfig
+##########################################################
+# IOScheds
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_DEFAULT_CFQ=y
 CONFIG_DEFAULT_IOSCHED="cfq"
-CONFIG_CPU_OVERCLOCK=y
-CONFIG_GPU_OVERCLOCK=y
-CONFIG_LOW_CPUCLOCKS=y
-CONFIG_GPU_VOLTAGE_TABLE=y
+
+##########################################################
+# Misc
+CONFIG_CC_OPTIMIZE_FOR_SPEED=y
+CONFIG_MSM_CPUFREQ_LIMITER=m
+
+##########################################################
+# Unused
+# CONFIG_AUTOSMP is not set
+# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+# CONFIG_HOTPLUG_CPU is not set
+# CONFIG_QUICK_WAKEUP is not set
+# CONFIG_KERNEL_GZIP is not set
+# CONFIG_OC_ULTIMATE is not set
+# CONFIG_CPU_OVERCLOCK is not set
+# CONFIG_GPU_OVERCLOCK is not set
+
+##########################################################
+# Governors
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+
+CONFIG_CPU_FREQ_GOV_COMMON=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ABYSSPLUG is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
@@ -556,27 +706,5 @@ CONFIG_GPU_VOLTAGE_TABLE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
 
-CONFIG_CPU_FREQ_GOV_ABYSSPLUG=y
-CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
-CONFIG_CPU_FREQ_GOV_BADASS=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
-CONFIG_CPU_FREQ_GOV_DARKNESS=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_SLP=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y 
-CONFIG_CPU_FREQ_GOV_BIOSHOCK=y 
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
 
-<<<<<<< HEAD:arch/arm/configs/twrp_defconfig
-CONFIG_GPU_VOLTAGE_TABLE=y
->>>>>>> 948d2499f0e... kernel: Expose GPU voltage table:arch/arm/configs/side_jf_defconfig
-=======
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
->>>>>>> adeb0e39e1b... cpufreq: Add a ton of governors:arch/arm/configs/side_jf_defconfig
+CONFIG_LOCALVERSION="-JDCTeam-BuffCore_TWRP"
