--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -624,7 +624,8 @@ CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_DEFAULT_DEADLINE=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_DEFAULT_FIOPS=y
 
 # Governors
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ABYSSPLUG is not set
