--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -45,7 +45,6 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-# CONFIG_DEFAULT_NOOP is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
@@ -625,7 +624,9 @@ CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_FIOPS=y
-CONFIG_DEFAULT_FIOPS=y
+CONFIG_DEFAULT_ROW=y
+# CONFIG_DEFAULT_FIOPS=y
+# CONFIG_DEFAULT_NOOP=y
 
 # Governors
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ABYSSPLUG is not set
