--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -616,5 +616,6 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_HW is not set
 
 # Buffcore
+CONFIG_FORCE_FAST_CHARGE=y
 
 CONFIG_LOCALVERSION="-JDCTeam-BuffCore_10.2"
