--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -618,6 +618,7 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 # Buffcore
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_QUICK_WAKEUP=y
 
 # TCP
 CONFIG_TCP_CONG_CUBIC=y
